Improve LLGR stale time type safety
Use Uint24 instead of plain Integer in the map we are keeping, reducing
conversions a bit.

JIRA: BGPCEP-1071
Change-Id: I1c1142cbd40f88fb9a073c02b89a3c4ce63117d5
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>